clean up docs and tests
